--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,6 +14,9 @@
   </ion-header>
 
   <div id="container">
+    <h1 class="text-3xl font-bold underline">
+      Hello world!
+    </h1>
     <strong>Ready to create an app?</strong>
     <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
   </div>
