--- a/src/app/auth/pages/login/login.page.html
+++ b/src/app/auth/pages/login/login.page.html
@@ -1,15 +1,16 @@
 <!-- Diseño pagina web Movil -->
 <ion-content *ngIf="isMobilView; else desktopView" [fullscreen]="true">
-  <div class="container flex mt-20 items-center">
+  <div class="container flex flex-col justify-center items-center my-auto mx-auto py-3">
+    <div class="container-logo flex">
     <img
       src="../../../../assets/icon/Logo_AppDopta.jpeg"
       alt="Logo App Dopta"
-      class="h-20 w-20 ml-8"
+      class="h-20 w-20"
     />
     <ion-title size="large" class="text-4xl text-gray-600">AppDopta</ion-title>
   </div>
   <div class="container-buttons">
-    <div class="container-fb flex ml-11 mt-4">
+    <div class="container-fb flex">
       <a
         href="#"
         class="flex items-center justify-center w-72 px-4 py-2 mt-2 space-x-4 text-sm text-center bg-white text-blue-500 transition-colors duration-200 transform border rounded-3xl dark:text-gray-300 dark:border-gray-300 hover:bg-gray-600 dark:hover:bg-gray-700"
@@ -32,7 +33,7 @@
       </a>
     </div>
 
-    <div class="container-apple flex ml-11">
+    <div class="container-apple flex">
       <a
         href="#"
         class="flex items-center justify-center w-72 px-1 py-2 mt-2 space-x-3 text-sm text-center bg-white text-black transition-colors duration-200 transform border rounded-3xl dark:text-gray-300 dark:border-gray-300 hover:bg-gray-600 dark:hover:bg-gray-700"
@@ -49,7 +50,7 @@
       </a>
     </div>
 
-    <div class="container-google flex ml-11">
+    <div class="container-google flex">
       <a
         href="#"
         class="flex items-center justify-center w-72 px-4 py-2 mt-2 space-x-3 text-sm text-center bg-white text-blue-500 transition-colors duration-200 transform border rounded-3xl dark:text-gray-300 dark:border-gray-300 hover:bg-gray-600 dark:hover:bg-gray-700"
@@ -67,16 +68,16 @@
     </div>
   </div>
 
-  <hr class="mt-4" />
+  <hr class="mt-4 text-black"/>
 
-  <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
+  <div class="container-formulario mt-8">
     <form
       [formGroup]="formularioLogin"
       class="space-y-6"
       action="#"
       method="POST"
     >
-      <div class="ml-11">
+      <div>
         <label
           for="email"
           class="block ml-1 text-sm font-medium leading-6 text-gray-900"
@@ -95,7 +96,7 @@
         </div>
       </div>
 
-      <div class="ml-11">
+      <div>
         <div class="flex items-center justify-between">
           <label
             for="password"
@@ -123,7 +124,7 @@
         </div>
       </div>
 
-      <div class="container-fb flex ml-11 items-center justify-items-center">
+      <div class="container-fb flex items-center justify-items-center">
         <button
           type="submit"
           class="flex w-72 justify-center rounded-3xl bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
@@ -142,22 +143,29 @@
       >
     </p>
   </div>
+  </div>
+
 </ion-content>
 
 
 <!-- Diseño pagina web Escritorio -->
 <ng-template #desktopView>
-  <ion-content>
-    <div class="container mx-auto px-4 py-8">
-      <div class="flex justify-center items-center">
+  <ion-content class="flex">
+
+    <div class="flex">
+      <div class="container-logo flex-col py-44 bg-blue-500 w-1/2 h-screen">
         <img
           src="../../../../assets/icon/Logo_AppDopta.jpeg"
           alt="Logo App Dopta"
-          class="h-20 w-20"
+          class="h-48 w-48 mx-auto"
         />
-        <h1 class="text-4xl text-gray-600 ml-4">AppDopta</h1>
+        <h1 class="text-4xl text-white text-center mx-auto mb-4">¡Bienvenida/o a AppDopta!</h1>
+        <p class="text-center mx-auto text-white">Encuentra tu compañero peludo perfecto y ayuda a</p>
+        <p class="text-center mx-auto text-white">darles un hogar a aquellos que lo necesitan</p>
       </div>
-      <div class="mt-8 max-w-md mx-auto">
+
+      <div class="container-inicio-sesion mx-auto my-auto">
+        <div class="mt-8 max-w-md mx-auto">
         <form [formGroup]="formularioLogin" class="space-y-6">
           <h2 class="text-4xl font-bold">¡Bienvenido!</h2>
           <div>
@@ -212,7 +220,7 @@
 
       <hr class="mt-8" />
 
-      <div class="buttons-companys grid grid-cols-1 md:grid-cols-3 gap-4 mt-8">
+      <div class="buttons-companys mt-8 flex justify-center">
         <div class="container-fb flex ml-11">
           <a
             href="#"
@@ -232,7 +240,7 @@
             </svg>
           </a>
         </div>
-        
+
         <div class="container-apple flex ml-11">
           <a
             href="#"
@@ -278,5 +286,7 @@
         </p>
       </div>
     </div>
+      </div>
+
   </ion-content>
 </ng-template>
