se agrega registro vista movil y desktop, y se ajustan los colores del proyecto y los estilo

--- a/src/app/auth/pages/login/login.page.html
+++ b/src/app/auth/pages/login/login.page.html
@@ -1,33 +1,33 @@
 <!-- Diseño pagina web Movil -->
 <ion-content *ngIf="isMobilView; else desktopView" [fullscreen]="true">
-  <div class="container flex flex-col justify-center items-center my-auto mx-auto py-3">
+  <div class="container flex flex-col justify-center items-center mt-20 py-3">
     <div class="container-logo flex">
     <img
       src="../../../../assets/icon/Logo_AppDopta.jpeg"
       alt="Logo App Dopta"
       class="h-20 w-20"
     />
-    <ion-title size="large" class="text-4xl text-gray-600">AppDopta</ion-title>
+    <ion-title size="large" class="text-4xl text-principal-grey-700">AppDopta</ion-title>
   </div>
-  <div class="container-buttons">
+  <div class="container-buttons mt-8">
     <div class="container-fb flex">
       <a
         href="#"
-        class="flex items-center justify-center w-72 px-4 py-2 mt-2 space-x-4 text-sm text-center bg-white text-blue-500 transition-colors duration-200 transform border rounded-3xl dark:text-gray-300 dark:border-gray-300 hover:bg-gray-600 dark:hover:bg-gray-700"
+        class="flex items-center justify-center w-72 px-4 py-2 mt-2 space-x-4 text-sm text-center bg-white text-pricipal-grey-400 transition-colors duration-200 transform border rounded-3xl dark:text-principal-grey-700 dark:border-principal-grey-700 hover:bg-principal-grey-700 dark:hover:bg-pricipal-grey-400"
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="20"
           height="20"
           fill="currentColor"
-          class="bi bi-facebook"
+          class="bi bi-facebook text-blue-500"
           viewBox="0 0 16 16"
         >
           <path
             d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"
           />
         </svg>
-        <span class="text-sm text-gray-700 dark:text-gray-200"
+        <span class="text-sm"
           >Continuar con Facebook</span
         >
       </a>
@@ -36,15 +36,15 @@
     <div class="container-apple flex">
       <a
         href="#"
-        class="flex items-center justify-center w-72 px-1 py-2 mt-2 space-x-3 text-sm text-center bg-white text-black transition-colors duration-200 transform border rounded-3xl dark:text-gray-300 dark:border-gray-300 hover:bg-gray-600 dark:hover:bg-gray-700"
+        class="flex items-center justify-center w-72 px-4 py-2 mt-2 space-x-4 text-sm text-center bg-white text-pricipal-grey-400 transition-colors duration-200 transform border rounded-3xl dark:text-principal-grey-700 dark:border-principal-grey-700 hover:bg-principal-grey-700 dark:hover:bg-pricipal-grey-400"
       >
-        <svg viewBox="0 0 384 512" width="20" height="20" fill="currentColor">
+        <svg viewBox="0 0 384 512" class=" w-5 h-5 text-black" >
           <path
             fill="currentColor"
             d="M318.7 268.7c-.2-36.7 16.4-64.4 50-84.8-18.8-26.9-47.2-41.7-84.7-44.6-35.5-2.8-74.3 20.7-88.5 20.7-15 0-49.4-19.7-76.4-19.7C63.3 141.2 4 184.8 4 273.5q0 39.3 14.4 81.2c12.8 36.7 59 126.7 107.2 125.2 25.2-.6 43-17.9 75.8-17.9 31.8 0 48.3 17.9 76.4 17.9 48.6-.7 90.4-82.5 102.6-119.3-65.2-30.7-61.7-90-61.7-91.9zm-56.6-164.2c27.3-32.4 24.8-61.9 24-72.5-24.1 1.4-52 16.4-67.9 34.9-17.5 19.8-27.8 44.3-25.6 71.9 26.1 2 49.9-11.4 69.5-34.3z"
           />
         </svg>
-        <span class="text-sm text-gray-700 dark:text-gray-200"
+        <span class="text-sm"
           >Continuar con Apple</span
         >
       </a>
@@ -53,7 +53,7 @@
     <div class="container-google flex">
       <a
         href="#"
-        class="flex items-center justify-center w-72 px-4 py-2 mt-2 space-x-3 text-sm text-center bg-white text-blue-500 transition-colors duration-200 transform border rounded-3xl dark:text-gray-300 dark:border-gray-300 hover:bg-gray-600 dark:hover:bg-gray-700"
+        class="flex items-center justify-center w-72 px-4 py-2 mt-2 space-x-4 text-sm text-center bg-white text-pricipal-grey-400 transition-colors duration-200 transform border rounded-3xl dark:text-principal-grey-700 dark:border-principal-grey-700 hover:bg-principal-grey-700 dark:hover:bg-pricipal-grey-400"
       >
         <img
           class="w-5 h-5"
@@ -61,16 +61,15 @@
           loading="lazy"
           alt="google logo"
         />
-        <span class="text-sm text-gray-700 dark:text-gray-200"
+        <span class="text-sm"
           >Continuar con Google</span
         >
       </a>
     </div>
   </div>
 
-  <hr class="mt-4 text-black"/>
-
-  <div class="container-formulario mt-8">
+  <div class="container-formulario">
+    <hr class="my-8 text-pricipal-grey-400">
     <form
       [formGroup]="formularioLogin"
       class="space-y-6"
@@ -80,7 +79,7 @@
       <div>
         <label
           for="email"
-          class="block ml-1 text-sm font-medium leading-6 text-gray-900"
+          class="block ml-1 text-sm font-medium leading-6 text-principal-blue-400"
           >Email</label
         >
         <div class="mt-2">
@@ -91,7 +90,7 @@
             type="email"
             autocomplete="email"
             required
-            class="block w-72 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+            class="block w-72 pl-2 rounded-md py-1.5 text-principal-grey-700 shadow-sm ring-1 ring-inset ring-pricipal-grey-400 placeholder:text-principal-grey-400 focus:ring-2 focus:ring-inset focus:ring-principal-grey-700 sm:text-sm sm:leading-6"
           />
         </div>
       </div>
@@ -100,13 +99,13 @@
         <div class="flex items-center justify-between">
           <label
             for="password"
-            class="block ml-1 text-sm font-medium leading-6 text-gray-900"
+            class="block ml-1 text-sm font-medium leading-6 text-principal-blue-400"
             >Contraseña</label
           >
           <div class="text-sm">
             <a
               href="#"
-              class="font-semibold text-indigo-600 hover:text-indigo-500 mr-2"
+              class="font-semibold text-pricipal-grey-400 hover:text-principal-grey-700 mr-2"
               >¿Olvidaste tu contraseña?</a
             >
           </div>
@@ -119,7 +118,7 @@
             type="password"
             autocomplete="current-password"
             required
-            class="block w-72 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+            class="block w-72 pl-2 rounded-md py-1.5 text-principal-grey-700 shadow-sm ring-1 ring-inset ring-pricipal-grey-400 placeholder:text-principal-grey-400 focus:ring-2 focus:ring-inset focus:ring-principal-grey-700 sm:text-sm sm:leading-6"
           />
         </div>
       </div>
@@ -127,18 +126,20 @@
       <div class="container-fb flex items-center justify-items-center">
         <button
           type="submit"
-          class="flex w-72 justify-center rounded-3xl bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
+          class="flex w-72 justify-center rounded-3xl bg-principal-blue-400 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-principal-blue-600 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-principal-blue-600"
         >
           Iniciar Sesión
         </button>
       </div>
     </form>
 
-    <p class="mt-10 text-center text-sm text-gray-500">
+    <hr class="mt-14 text-pricipal-grey-400">
+
+    <p class="mt-10 text-center text-sm text-pricipal-grey-700">
       ¿No eres miembro? |
       <a
         href="registro"
-        class="font-semibold leading-6 text-indigo-600 hover:text-indigo-500"
+        class="font-semibold leading-6 text-principal-blue-400 hover:text-principal-blue-600"
         >Crear una cuenta</a
       >
     </p>
@@ -153,15 +154,15 @@
   <ion-content class="flex">
 
     <div class="flex">
-      <div class="container-logo flex-col py-44 bg-blue-500 w-1/2 h-screen">
+      <div class="container-logo flex-col py-80 bg-principal-blue-400 w-1/2 h-screen">
         <img
           src="../../../../assets/icon/Logo_AppDopta.jpeg"
           alt="Logo App Dopta"
           class="h-48 w-48 mx-auto"
         />
-        <h1 class="text-4xl text-white text-center mx-auto mb-4">¡Bienvenida/o a AppDopta!</h1>
-        <p class="text-center mx-auto text-white">Encuentra tu compañero peludo perfecto y ayuda a</p>
-        <p class="text-center mx-auto text-white">darles un hogar a aquellos que lo necesitan</p>
+        <h1 class="text-4xl text-white text-center mx-auto mb-4 font-bold">¡Bienvenida/o a AppDopta!</h1>
+        <p class="text-center mx-auto text-white font-bold">Encuentra tu compañero peludo perfecto y ayuda a</p>
+        <p class="text-center mx-auto text-white font-bold">darles un hogar a aquellos que lo necesitan</p>
       </div>
 
       <div class="container-inicio-sesion mx-auto my-auto">
@@ -171,7 +172,7 @@
           <div>
             <label
               for="email"
-              class="block text-sm font-medium leading-6 text-gray-900"
+              class="block text-sm font-medium leading-6 text-principal-blue-400"
               >Email</label
             >
             <input
@@ -181,19 +182,19 @@
               type="email"
               autocomplete="email"
               required
-              class="block w-full rounded-md border-gray-300 shadow-sm py-2 px-3 focus:ring-indigo-500 focus:border-indigo-500 mt-1"
+              class="block w-full rounded-md border-pricipal-grey-400 border-2 shadow-sm py-2 px-3 focus:ring-pricipal-grey-400 focus:border-principal-grey-700 mt-1"
             />
           </div>
           <div>
             <div class="flex justify-between">
               <label
                 for="password"
-                class="block text-sm font-medium leading-6 text-gray-900"
+                class="block text-sm font-medium leading-6 text-principal-blue-400"
                 >Contraseña</label
               >
               <a
                 href="#"
-                class="text-indigo-600 hover:text-indigo-500 text-sm font-semibold"
+                class="text-pricipal-grey-400 hover:text-principal-grey-700 text-sm font-semibold"
                 >¿Olvidaste tu contraseña?</a
               >
             </div>
@@ -204,13 +205,13 @@
               type="password"
               autocomplete="current-password"
               required
-              class="block w-full rounded-md border-gray-300 shadow-sm py-2 px-3 focus:ring-indigo-500 focus:border-indigo-500 mt-1"
+              class="block w-full rounded-md border-pricipal-grey-400 border-2 shadow-sm py-2 px-3 focus:ring-pricipal-grey-400 focus:border-principal-grey-700 mt-1"
             />
           </div>
           <div>
             <button
               type="submit"
-              class="w-full py-3 bg-black text-white rounded-full shadow-md hover:bg-indigo-700 transition duration-300"
+              class="w-full py-3 bg-black text-white rounded-full shadow-md hover:bg-pricipal-grey-400 transition duration-300"
             >
               Iniciar Sesión
             </button>
@@ -224,7 +225,7 @@
         <div class="container-fb flex ml-11">
           <a
             href="#"
-            class="flex items-center justify-center w-16 h-16 text-sm text-center bg-white text-blue-500 transition-colors duration-200 transform border rounded-full dark:text-gray-300 dark:border-gray-300 hover:bg-gray-600 dark:hover:bg-gray-700"
+            class="flex items-center justify-center w-16 h-16 text-sm text-center bg-white text-blue-500 transition-colors duration-200 transform border rounded-full dark:text-principal-grey-700 dark:border-principal-grey-700 hover:bg-principal-blue-400 dark:hover:bg-principal-grey-700"
           >
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -244,7 +245,7 @@
         <div class="container-apple flex ml-11">
           <a
             href="#"
-            class="flex items-center justify-center w-16 h-16 text-sm text-center bg-white text-black transition-colors duration-200 transform border rounded-full dark:text-gray-300 dark:border-gray-300 hover:bg-gray-600 dark:hover:bg-gray-700"
+            class="flex items-center justify-center w-16 h-16 text-sm text-center bg-white text-black transition-colors duration-200 transform border rounded-full dark:text-principal2 dark:border-principal2 hover:bg-principal-blue-400 dark:hover:bg-principal2"
           >
             <svg
               viewBox="0 0 384 512"
@@ -263,7 +264,7 @@
         <div class="container-google flex ml-11">
           <a
             href="#"
-            class="flex items-center justify-center w-16 h-16 text-sm text-center bg-white text-black transition-colors duration-200 transform border rounded-full dark:text-gray-300 dark:border-gray-300 hover:bg-gray-600 dark:hover:bg-gray-700"
+            class="flex items-center justify-center w-16 h-16 text-sm text-center bg-white text-black transition-colors duration-200 transform border rounded-full dark:text-principal2 dark:border-principal2 hover:bg-principal-blue-400 dark:hover:bg-principal2"
           >
             <img
               class="w-10 h-10"
@@ -276,11 +277,11 @@
       </div>
 
       <div class="container-member">
-        <p class="mt-8 text-center text-sm text-gray-500">
+        <p class="mt-8 text-center text-sm text-pricipal-grey-400">
           ¿No eres miembro? |
           <a
             href="registro"
-            class="text-indigo-600 hover:text-indigo-500 font-semibold"
+            class="text-principal-blue-400 hover:text-principal-blue-600 font-semibold"
             >Crear una cuenta</a
           >
         </p>
