--- a/src/app/auth/pages/registro/registro.page.html
+++ b/src/app/auth/pages/registro/registro.page.html
@@ -1,13 +1,397 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>registro</ion-title>
-  </ion-toolbar>
-</ion-header>
+<!-- Diseño pagina web Movil -->
+<ion-content *ngIf="isMobilView; else desktopView" [fullscreen]="true">
+  <div class="container flex flex-col justify-center items-center mt-8 py-3">
+    <div class="container-logo flex">
+    <img
+      src="../../../../assets/icon/Logo_AppDopta.jpeg"
+      alt="Logo App Dopta"
+      class="h-20 w-20"
+    />
+    <ion-title size="large" class="text-4xl text-principal-grey-700">AppDopta</ion-title>
+  </div>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">registro</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div class="container-formulario mt-1">
+    <form
+      [formGroup]="formularioRegistro"
+      class="space-y-1"
+      action="#"
+      method="POST"
+    >
+      <div>
+        <label
+          for="nombre"
+          class="block ml-1 text-sm font-medium leading-6 text-principal-blue-400"
+          >Nombre</label
+        >
+        <div class="mt-1">
+          <input
+            formControlName="nombre"
+            id="nombre"
+            name="nombre"
+            type="text"
+            required
+            class="block w-72 pl-2 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+          />
+        </div>
+      </div>
+
+      <div>
+        <label
+          for="apellido"
+          class="block ml-1 text-sm font-medium leading-6 text-principal-blue-400"
+          >Apellido</label
+        >
+        <div class="mt-1">
+          <input
+            formControlName="apellido"
+            id="apellido"
+            name="apellido"
+            type="text"
+            required
+            class="block w-72 pl-2 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+          />
+        </div>
+      </div>
+
+      <div>
+        <label
+          for="username"
+          class="block ml-1 text-sm font-medium leading-6 text-principal-blue-400"
+          >Nombre de usuario</label
+        >
+        <div class="mt-1">
+          <input
+            formControlName="username"
+            id="username"
+            name="username"
+            type="text"
+            required
+            class="block w-72 pl-2 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+          />
+        </div>
+      </div>
+
+      <div>
+        <label
+          for="fechaNacimiento"
+          class="block ml-1 text-sm font-medium leading-6 text-principal-blue-400"
+          >Fecha de nacimiento</label
+        >
+        <div class="mt-1">
+          <input
+            formControlName="fechaNacimiento"
+            id="fechaNacimiento"
+            name="fechaNacimiento"
+            type="date"
+            required
+            class="block w-72 pl-2 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+          />
+        </div>
+      </div>
+
+      <div>
+        <label
+          for="direccion"
+          class="block ml-1 text-sm font-medium leading-6 text-principal-blue-400"
+          >Dirección</label
+        >
+        <div class="mt-1">
+          <input
+            formControlName="direccion"
+            id="direccion"
+            name="direccion"
+            type="text"
+            required
+            class="block w-72 pl-2 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+          />
+        </div>
+      </div>
+
+      <div>
+        <label
+          for="email"
+          class="block ml-1 text-sm font-medium leading-6 text-principal-blue-400"
+          >Email</label
+        >
+        <div class="mt-1">
+          <input
+            formControlName="correo"
+            id="email"
+            name="email"
+            type="email"
+            autocomplete="email"
+            required
+            class="block w-72 pl-2 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+          />
+        </div>
+      </div>
+
+      <div>
+        <div class="flex items-center justify-between">
+          <label
+            for="password"
+            class="block ml-1 text-sm font-medium leading-6 text-principal-blue-400"
+            >Contraseña</label
+          >
+        </div>
+        <div class="mt-1">
+          <input
+            formControlName="password"
+            id="password"
+            name="password"
+            type="password"
+            required
+            class="block w-72 pl-2 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+          />
+        </div>
+        <div class="text-errors-red-300" *ngIf="formularioRegistro.get('password')!.errors">
+              La contraseña es requerida
+        </div>
+      </div>
+
+      <div>
+        <div class="flex items-center justify-between">
+          <label
+            for="password"
+            class="block ml-1 text-sm font-medium leading-6 text-principal-blue-400"
+            >Contraseña</label
+          >
+        </div>
+        <div class="mt-1">
+          <input
+            formControlName="confirmPassword"
+            id="confirmPassword"
+            name="confirmPassword"
+            type="password"
+            required
+            class="block w-72 pl-2 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+          />
+        </div>
+          <div class="text-errors-red-300" *ngIf="formularioRegistro.hasError('notSame')">
+            La contraseña no coincide
+          </div>
+      </div>
+
+      <div class="container-fb flex items-center justify-items-center">
+        <button
+          type="submit"
+          class="flex w-72 justify-center rounded-3xl bg-principal-blue-400 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-principal-blue-600 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-principal-blue-600"
+        >
+          Iniciar Sesión
+        </button>
+      </div>
+    </form>
+
+    <p class="mt-10 text-center text-sm text-pricipal-grey-400">
+      ¿Ya tienes una cuenta? |
+      <a
+        href="login"
+        class="font-semibold leading-6 text-principal-blue-400 hover:text-principal-blue-600"
+        >Inicia sesión</a
+      >
+    </p>
+  </div>
+  </div>
+
 </ion-content>
+
+
+<!-- Diseño pagina web Escritorio -->
+<ng-template #desktopView>
+  <ion-content class="flex">
+
+    <div class="flex">
+      <div class="container-logo flex-col py-80 bg-principal-blue-400 w-1/2 h-screen">
+        <img
+          src="../../../../assets/icon/Logo_AppDopta.jpeg"
+          alt="Logo App Dopta"
+          class="h-48 w-48 mx-auto"
+        />
+        <h1 class="text-4xl text-white text-center mb-4 font-bold">¡Bienvenida/o a AppDopta!</h1>
+        <p class="text-center  text-white font-bold">Encuentra tu compañero peludo perfecto y ayuda a</p>
+        <p class="text-center  text-white font-bold">darles un hogar a aquellos que lo necesitan</p>
+      </div>
+
+      <div class="mt-5 h-screen container-registro mx-auto my-auto">
+        <div class="max-w-md mx-auto">
+        <form [formGroup]="formularioRegistro" class="space-y-1">
+          <h2 class="text-4xl font-bold mb-0 pb-0">¡Crea tu cuenta!</h2>
+          <p class="mt-0 pt-0">¡Es gratis!</p>
+          <div>
+            <label
+              for="nombre"
+              class="block text-sm font-medium leading-6 text-principal-blue-400"
+              >Nombre</label
+            >
+            <input
+              formControlName="nombre"
+              id="nombre"
+              name="nombre"
+              type="text"
+              required
+              class="block w-full rounded-md border-pricipal-grey-400 border-2 shadow-sm py-2 px-3 focus:ring-pricipal-grey-400 focus:border-principal-grey-700"
+            />
+          </div>
+
+          <div>
+            <div class="flex justify-between">
+              <label
+                for="apellido"
+                class="block text-sm font-medium leading-6 text-principal-blue-400"
+                >Apellido</label
+              >
+            </div>
+            <input
+              formControlName="apellido"
+              id="apellido"
+              name="apellido"
+              type="text"
+              required
+              class="block w-full rounded-md border-pricipal-grey-400 border-2 shadow-sm py-2 px-3 focus:ring-pricipal-grey-400 focus:border-principal-grey-700"
+            />
+          </div>
+
+          <div>
+            <div class="flex justify-between">
+              <label
+                for="username"
+                class="block text-sm font-medium leading-6 text-principal-blue-400"
+                >Nombre de usuario</label
+              >
+            </div>
+            <input
+              formControlName="username"
+              id="username"
+              name="username"
+              type="text"
+              required
+              class="block w-full rounded-md border-pricipal-grey-400 border-2 shadow-sm py-2 px-3 focus:ring-pricipal-grey-400 focus:border-principal-grey-700"
+            />
+          </div>
+
+          <div>
+            <div class="flex justify-between">
+              <label
+                for="fechaNacimiento"
+                class="block text-sm font-medium leading-6 text-principal-blue-400"
+                >Fecha de nacimiento</label
+              >
+            </div>
+            <input
+              formControlName="fechaNacimiento"
+              id="fechaNacimiento"
+              name="fechaNacimiento"
+              type="date"
+              required
+              class="block w-full rounded-md border-pricipal-grey-400 border-2 shadow-sm py-2 px-3 focus:ring-pricipal-grey-400 focus:border-principal-grey-700"
+            />
+          </div>
+
+          <div>
+            <label
+              for="email"
+              class="block text-sm font-medium leading-6 text-principal-blue-400"
+              >Email</label
+            >
+            <input
+              formControlName="correo"
+              id="email"
+              name="email"
+              type="email"
+              autocomplete="email"
+              required
+              class="block w-full rounded-md border-pricipal-grey-400 border-2 shadow-sm py-2 px-3 focus:ring-pricipal-grey-400 focus:border-principal-grey-700"
+            />
+          </div>
+
+          <div>
+            <label
+              for="direccion"
+              class="block text-sm font-medium leading-6 text-principal-blue-400"
+              >Dirección</label
+            >
+            <input
+              formControlName="correo"
+              id="direccion"
+              name="direccion"
+              type="text"
+              required
+              class="block w-full rounded-md border-pricipal-grey-400 border-2 shadow-sm py-2 px-3 focus:ring-pricipal-grey-400 focus:border-principal-grey-700"
+            />
+          </div>
+
+          <div>
+            <div class="flex justify-between">
+              <label
+                for="password"
+                class="block text-sm font-medium leading-6 text-principal-blue-400"
+                >Contraseña</label
+              >
+
+            </div>
+            <input
+              formControlName="password"
+              id="password"
+              name="password"
+              type="password"
+              autocomplete="current-password"
+              required
+              class="block w-full rounded-md border-pricipal-grey-400 border-2 shadow-sm py-2 px-3 focus:ring-pricipal-grey-400 focus:border-principal-grey-700"
+            />
+            <div class="text-errors-red-300" *ngIf="formularioRegistro.get('password')!.errors">
+              La contraseña es requerida
+            </div>
+
+          </div>
+
+          <div>
+            <div class="flex justify-between">
+              <label
+                for="confirm_password"
+                class="block text-sm font-medium leading-6 text-principal-blue-400"
+                >Repetir contraseña
+              </label>
+
+            </div>
+            <input
+              formControlName="confirmPassword"
+              id="confirmPassword"
+              name="confirmPassword"
+              type="password"
+              required
+              class="block w-full rounded-md border-pricipal-grey-400 border-2 shadow-sm py-2 px-3 focus:ring-pricipal-grey-400 focus:border-principal-grey-700"/>
+            <div class="text-errors-red-300" *ngIf="formularioRegistro.hasError('notSame')">
+              La contraseña no coincide
+            </div>
+          </div>
+
+          <div>
+            <button
+              type="submit"
+              class="w-full py-3 bg-black text-white rounded-full shadow-md hover:bg-pricipal-grey-400 transition duration-300"
+            >
+              Registrar
+            </button>
+          </div>
+        </form>
+      </div>
+
+      <hr class="mt-8" />
+
+
+
+      <div class="container-member">
+        <p class="mt-8 text-center text-sm text-pricipal-grey-400">
+          ¿Ya tienes una cuenta? |
+          <a
+            href="login"
+            class="text-principal-blue-400 hover:text-principal-blue-600 font-semibold"
+            >Inicio Sesión</a
+          >
+        </p>
+      </div>
+    </div>
+      </div>
+
+  </ion-content>
+</ng-template>
