--- a/src/app/auth/pages/login/login.page.html
+++ b/src/app/auth/pages/login/login.page.html
@@ -72,8 +72,8 @@
     <hr class="my-8 text-pricipal-grey-400">
     <form
       [formGroup]="formularioLogin"
+      (ngSubmit)="onSubmit()"
       class="space-y-6"
-      action="#"
       method="POST"
     >
       <div>
@@ -84,7 +84,7 @@
         >
         <div class="mt-2">
           <input
-            formControlName="correo"
+            formControlName="email"
             id="email"
             name="email"
             type="email"
@@ -168,8 +168,9 @@
       <div class="container-inicio-sesion mx-auto my-auto">
         <div class="mt-8 max-w-md mx-auto">
         <form
-        class="space-y-6">
         [formGroup]="formularioLogin"
+        (ngSubmit)="onSubmit()"
+        class="space-y-6">
           <h2 class="text-4xl font-bold">¡Bienvenido!</h2>
           <div>
             <label
@@ -178,9 +179,9 @@
               >Email</label
             >
             <input
-              formControlName="correo"
-              id="correo"
-              name="correo"
+              formControlName="email"
+              id="email"
+              name="email"
               type="email"
               autocomplete="email"
               required
