--- a/src/app/auth/pages/recuperacion-contrasenia/recuperacion-contrasenia.page.html
+++ b/src/app/auth/pages/recuperacion-contrasenia/recuperacion-contrasenia.page.html
@@ -71,7 +71,8 @@
   <div class="container-formulario">
     <hr class="my-8 text-pricipal-grey-400">
     <form
-      [formGroup]="formularioLogin"
+      [formGroup]="recuperarContrasenia"
+      (ngSubmit)="onSubmit()"
       class="space-y-6"
       action="#"
       method="POST"
@@ -84,7 +85,7 @@
         >
         <div class="mt-2">
           <input
-            formControlName="correo"
+            formControlName="email"
             id="email"
             name="email"
             type="email"
@@ -139,7 +140,10 @@
 
       <div class="container-inicio-sesion mx-auto my-auto">
         <div class="mt-8 max-w-md mx-auto">
-        <form [formGroup]="formularioLogin" class="space-y-6">
+        <form
+        [formGroup]="recuperarContrasenia"
+        (ngSubmit)="onSubmit()"
+        class="space-y-6">
           <h2 class="text-4xl text-principal-grey-700 font-bold">¿Olvidaste tu contraseña?</h2>
           <div>
             <label
@@ -148,7 +152,7 @@
               >Ingresa tu correo electrónico, para recuperar tú contraseña</label
             >
             <input
-              formControlName="correo"
+              formControlName="email"
               id="email"
               name="email"
               type="email"
