--- a/src/app/auth/pages/registro/registro.page.html
+++ b/src/app/auth/pages/registro/registro.page.html
@@ -71,6 +71,24 @@
         </div>
       </div>
 
+      <div>
+        <label
+          for="telefono"
+          class="block ml-1 text-sm font-medium leading-6 text-principal-blue-400"
+          >Teléfono</label
+        >
+        <div class="mt-1">
+          <input
+            formControlName="telefono"
+            id="telefono"
+            name="telefono"
+            type="text"
+            required
+            class="block w-72 pl-2 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+          />
+        </div>
+      </div>
+
       <!-- <div>
         <label
           for="fechaNacimiento"
@@ -144,12 +162,9 @@
             class="block w-72 pl-2 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
           />
         </div>
-        <div class="text-errors-red-300" *ngIf="formularioRegistro.get('password')!.errors">
-              La contraseña es requerida
-        </div>
       </div>
 
-      <div>
+      <!-- <div>
         <div class="flex items-center justify-between">
           <label
             for="password"
@@ -170,14 +185,14 @@
           <div class="text-errors-red-300" *ngIf="formularioRegistro.hasError('notSame')">
             La contraseña no coincide
           </div>
-      </div>
+      </div> -->
 
       <div class="container-fb flex items-center justify-items-center">
         <button
           type="submit"
           class="flex w-72 justify-center rounded-3xl bg-principal-blue-400 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-principal-blue-600 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-principal-blue-600"
         >
-          Iniciar Sesión
+          Registrar
         </button>
       </div>
     </form>
