--- a/src/app/dashboard/pages/index/index.page.html
+++ b/src/app/dashboard/pages/index/index.page.html
@@ -1,13 +1,5 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>index</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Este es el index Funca??</ion-title>
-    </ion-toolbar>
-  </ion-header>
+
+
+<app-toolbar></app-toolbar>
 </ion-content>
